--- a/src/stylesheets/00_settings/_color.scss
+++ b/src/stylesheets/00_settings/_color.scss
@@ -15,8 +15,9 @@ $colorMap: (
   shadow: #FFFFFF61,
   hover-blue: #607CB1,
   dark-mode-blue: #101733,
+  dark-mode-white: linen,
   dark-mode-grey: #212121,
-  light-mode-white: #f2f2f2,
+  light-mode-white: ivory,
   autofill-blue: rgb(220, 235, 260),
   blur: rgba(160, 210, 200, 0.15),
   blur-lighter: rgba(160, 180, 190, 0.32),
